fixed modals displaying improperly on mobile and website scrolling to left on pages with fixed video backgrounds

--- a/client/src/Footer.scss
+++ b/client/src/Footer.scss
@@ -104,6 +104,6 @@
 
     // padding-bottom: 120px;
     @supports (-webkit-touch-callout: none) {
-        padding-bottom: 170px;
+        padding-bottom: 250px;
     }
 }
