--- a/client/src/Modals.scss
+++ b/client/src/Modals.scss
@@ -8,6 +8,12 @@
 
 }
 
+.modal-dialog {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .button-custom,
 .modal-button {
     background: black;
